--- a/services/backend/env.example
+++ b/services/backend/env.example
@@ -1,17 +1,30 @@
 # Database Configuration
-DATABASE_URL=postgresql://user:password@localhost/safewave
+POSTGRES_DB=safewave
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_PORT=5433
+DATABASE_URL=postgresql://user:password@localhost:5433/safewave
 
 # JWT Configuration
 SECRET_KEY=your-secret-key-change-in-production
 ALGORITHM=HS256
-ACCESS_TOKEN_EXPIRE_MINUTES=30
+ACCESS_TOKEN_EXPIRE_MINUTES=15
+REFRESH_TOKEN_EXPIRE_DAYS=7
 
 # API Configuration
 API_V1_STR=/api/v1
 PROJECT_NAME=Safe Wave API
+API_PORT=9000
 
 # OpenAI Configuration
 OPENAI_API_KEY=your-openai-api-key-here
+USE_LOCAL_MODELS=false
+COST_OPTIMIZATION=true
+
+# OpenRouter Configuration (Free LLM Fallback)
+OPENROUTER_API_KEY=your-openrouter-api-key-here
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+OPENROUTER_MODEL=meta-llama/llama-3.1-405b-instruct:free
 
 # SMTP Email Configuration
 SMTP_SERVER=smtp.gmail.com
@@ -21,6 +34,15 @@ SMTP_PASSWORD=your-app-password
 FROM_EMAIL=noreply@safewave.com
 
 # File Upload Configuration
-UPLOAD_DIR=uploads/audio
-MAX_FILE_SIZE=52428800
-ALLOWED_AUDIO_FORMATS=["mp3","wav","m4a","aac"]
+UPLOAD_BASE_DIR=uploads
+AUDIO_UPLOAD_DIR=uploads/audio
+DOCUMENT_UPLOAD_DIR=uploads/documents
+MAX_FILE_SIZE=104857600
+ALLOWED_AUDIO_FORMATS=["mp3","wav","m4a","aac","ogg","flac","webm"]
+ALLOWED_DOCUMENT_FORMATS=["pdf","doc","docx","txt","rtf"]
+
+# Audio Processing Configuration
+AUDIO_CHUNK_SIZE=8192
+ENABLE_AUDIO_STREAMING=true
+ENABLE_TRANSCRIPTION=true
+ENABLE_LLM_ANALYSIS=true
