feat: update backend infrastructure and documentation
- Updated requirements.txt with new dependencies for audio processing and LLM integration
- Enhanced docker-compose.yml with improved service configuration
- Updated README.md with comprehensive setup and usage instructions
- Enhanced SMTP setup guide with detailed configuration steps
- Added analytics implementation documentation
- Created upload directory structure with proper gitignore configuration

--- a/services/backend/docker-compose.yml
+++ b/services/backend/docker-compose.yml
@@ -4,28 +4,41 @@ services:
   postgres:
     image: postgres:15
     environment:
-      POSTGRES_DB: safewave
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
+      POSTGRES_DB: ${POSTGRES_DB:-safewave}
+      POSTGRES_USER: ${POSTGRES_USER:-user}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT:-5433}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
 
   api:
     build: .
     ports:
-      - "8000:8000"
+      - "${API_PORT:-9000}:9000"
     environment:
-      - DATABASE_URL=postgresql://user:password@postgres:5432/safewave
-      - SECRET_KEY=your-secret-key-change-in-production
-      - ALGORITHM=HS256
-      - ACCESS_TOKEN_EXPIRE_MINUTES=30
+      - DATABASE_URL=postgresql://${POSTGRES_USER:-user}:${POSTGRES_PASSWORD:-password}@postgres:5432/${POSTGRES_DB:-safewave}
+      - SECRET_KEY=${SECRET_KEY}
+      - ALGORITHM=${ALGORITHM:-HS256}
+      - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES:-30}
+      - REFRESH_TOKEN_EXPIRE_DAYS=${REFRESH_TOKEN_EXPIRE_DAYS:-7}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - SMTP_SERVER=${SMTP_SERVER:-smtp.gmail.com}
+      - SMTP_PORT=${SMTP_PORT:-587}
+      - SMTP_USERNAME=${SMTP_USERNAME}
+      - SMTP_PASSWORD=${SMTP_PASSWORD}
+      - FROM_EMAIL=${FROM_EMAIL:-noreply@safewave.com}
     depends_on:
       - postgres
     volumes:
       - .:/app
-    command: uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn main:app --host 0.0.0.0 --port 9000 --reload
 
 volumes:
   postgres_data:
+    driver: local
+
+networks:
+  default:
+    name: safewave-network
