Add comprehensive network setup for mobile device access
🌐 Network Setup Features:
- Automatic local IP detection script (scripts/get-local-ip.js)
- Cross-platform support (Windows, macOS, Linux)
- One-command network configuration (npm run network:setup)
- Backend network startup script generation
- Frontend API endpoint auto-configuration

📱 New NPM Scripts:
- npm run network:ip - Show local network IP
- npm run network:setup - Configure for network access
- npm run backend:network - Start backend on network IP
- npm run dev:network - Setup + start backend

🔧 Technical Implementation:
- Updates backend config.py with network IP
- Updates frontend config.ts with network endpoints
- Creates start-network.py for network-accessible backend
- Integrated with Turborepo pipeline
- Supports port 9000 (backend default)

📚 Documentation:
- NETWORK_SETUP.md - Complete setup guide
- NETWORK_SETUP_SUMMARY.md - Quick reference
- Updated README.md with network instructions

🎯 Benefits:
- Mobile devices can access backend on same WiFi
- No manual IP configuration needed
- Professional development workflow maintained
- Easy testing on real devices
- Automatic fallback handling

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,6 +7,7 @@
     "setup": "python -m pip install -r requirements.txt",
     "dev": "python main.py",
     "start": "python main.py",
+    "network": "python start-network.py",
     "build": "echo 'Python build complete'",
     "lint": "echo 'Python linting skipped - install flake8 for full linting'",
     "format": "echo 'Python formatting skipped - install black for full formatting'",
