--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     "backend:dev": "turbo run dev --filter=backend",
     "frontend:dev": "turbo run dev --filter=frontend",
     "backend:build": "turbo run build --filter=backend",
-    "frontend:build": "turbo run build --filter=frontend"
+    "frontend:build": "turbo run build --filter=frontend",
+    "network:ip": "node scripts/get-local-ip.js",
+    "network:setup": "node scripts/get-local-ip.js --update",
+    "network:backend": "node scripts/get-local-ip.js --backend",
+    "network:frontend": "node scripts/get-local-ip.js --frontend",
+    "backend:network": "turbo run network --filter=backend",
+    "dev:network": "npm run network:setup && npm run backend:network"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
