--- a/turbo.json
+++ b/turbo.json
@@ -33,6 +33,10 @@
     },
     "clean": {
       "cache": false
+    },
+    "network": {
+      "cache": false,
+      "persistent": true
     }
   }
 }
