--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -20,23 +20,38 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "expo": "~53.0.22",
+    "expo-application": "~6.1.5",
     "expo-av": "^15.1.7",
     "expo-blur": "~14.1.5",
+    "expo-camera": "~16.1.11",
     "expo-constants": "~17.1.7",
+    "expo-crypto": "~14.1.5",
+    "expo-device": "~7.1.4",
+    "expo-document-picker": "^13.1.6",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.7",
+    "expo-location": "~18.1.6",
+    "expo-media-library": "~17.1.7",
+    "expo-notifications": "~0.31.4",
+    "expo-permissions": "^14.4.0",
+    "expo-random": "^14.0.1",
     "expo-router": "~5.1.5",
+    "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
+    "expo-symbols": "^0.4.5",
     "expo-system-ui": "~5.0.11",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.6",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-web": "~0.20.0"
   },
   "devDependencies": {
