feat: Add Turborepo monorepo setup
- Add root package.json with npm workspaces for app/native and services/backend
- Add turbo.json with pipelines for dev, build, lint, test, and clean tasks
- Add backend package.json to integrate Python backend with npm workspaces
- Update frontend package.json with dev, build, and clean scripts for Turborepo
- Add comprehensive README.md with setup and usage instructions
- Update .gitignore with comprehensive rules for Node.js, Python, Expo, and Turborepo

Features:
- Run both frontend and backend together: npm run dev:all
- Run individually: npm run dev:frontend or npm run dev:backend
- Backend still works independently with python main.py
- Smart caching and task orchestration via Turborepo

--- a/app/native/package.json
+++ b/app/native/package.json
@@ -3,13 +3,16 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
+    "dev": "expo start",
     "start": "expo start",
+    "build": "expo export",
     "reset-project": "node ./scripts/reset-project.js",
     "update-ip": "node ./scripts/update-ip.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "clean": "rm -rf .expo dist"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
