feat: Add network IP configuration script with Turborepo integration
- Move and enhance get_network_ip.py to scripts/update_network_ip.py
- Add automatic frontend config.ts IP address updating
- Integrate with Turborepo as 'npm run update-ip' command
- Add comprehensive network IP detection with fallback methods
- Update both backend and frontend configurations automatically
- Add validation and error handling for IP addresses
- Update README.md with network IP configuration documentation

Features:
- Detects current network IP automatically
- Updates frontend config.ts with new IP addresses
- Ensures backend is accessible from mobile devices on local network
- Provides test URLs and next steps
- Integrated with Turborepo for easy execution

Usage: npm run update-ip

This solves the issue where Expo apps cannot access localhost from mobile devices
by automatically configuring the correct network IP for local development.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint": "turbo run lint",
     "lint:frontend": "turbo run lint --filter=native",
     "test": "turbo run test",
-    "clean": "turbo run clean"
+    "clean": "turbo run clean",
+    "update-ip": "turbo run update-ip --filter=backend"
   },
   "devDependencies": {
     "turbo": "^2.0.0"
