feat: Add comprehensive code formatting with Turborepo integration
- Frontend: Prettier with 2-space indentation
- Backend: Black + isort with 4-space indentation (Python standard)
- Turborepo integration for monorepo-wide formatting
- Format scripts: npm run format, format:check, format:frontend, format:backend
- Consistent 100-character line length across projects
- Automated import sorting and code formatting
- All code formatted and ready for development

--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
     "build:frontend": "turbo run build --filter=native",
     "lint": "turbo run lint",
     "lint:frontend": "turbo run lint --filter=native",
+    "lint:backend": "turbo run lint --filter=backend",
+    "format": "turbo run format",
+    "format:frontend": "turbo run format --filter=native",
+    "format:backend": "turbo run format --filter=backend",
+    "format:check": "turbo run format:check",
     "test": "turbo run test",
     "clean": "turbo run clean",
     "update-ip": "turbo run update-ip --filter=backend"
