--- a/services/backend/requirements.txt
+++ b/services/backend/requirements.txt
@@ -29,3 +29,9 @@ langchain-openai==0.0.2
 
 # Redis for caching
 redis==5.0.1
+
+# Development and formatting tools
+black==23.12.1
+isort==5.13.2
+flake8==7.0.0
+mypy==1.8.0
