--- a/app/native/package.json
+++ b/app/native/package.json
@@ -12,6 +12,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "lint": "expo lint",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
     "clean": "rm -rf .expo dist"
   },
   "dependencies": {
@@ -54,6 +56,7 @@
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
+    "prettier": "^3.1.1",
     "typescript": "~5.8.3"
   },
   "private": true
