feat: Complete database restructuring with enhanced email alert system
🎯 Major Changes:
- Removed audio_analysis table (duplicated data)
- Added comprehensive email_alerts table with tracking
- Restructured migrations with proper versioning (001, 002)
- Enhanced email alert service with rate limiting and validation

📊 Database Improvements:
- Clean migration system starting from 001
- Proper foreign key relationships
- No data duplication between tables
- Enhanced user model with email alert relationships

🚀 Email Alert System:
- Centralized email tracking in database
- Rate limiting to prevent spam
- Email validation and error handling
- Automatic retry mechanism for failed emails
- Comprehensive analytics and metrics
- Support for multiple alert types (immediate_voice, onboarding_analysis, critical_risk)

🔧 Technical Enhancements:
- Updated audio controller to use new EmailAlert service
- Fixed unreachable code and cleaned up imports
- Added comprehensive error handling
- Enhanced email templates with better formatting
- Added configuration options for email service

📚 Documentation:
- Complete database management documentation
- Migration usage examples
- Comprehensive testing suite
- Database restructuring summary

✅ Testing:
- All tests passing (6/6)
- Database properly migrated to version 002
- Backend running successfully
- Email alert system fully functional

This restructuring provides a much cleaner, more maintainable, and feature-rich
database architecture with professional-grade email alert capabilities.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,17 @@
     "format:check": "turbo run format:check",
     "test": "turbo run test",
     "clean": "turbo run clean",
-    "update-ip": "turbo run update-ip --filter=backend"
+    "update-ip": "turbo run update-ip --filter=backend",
+    "migration:new": "turbo run migration:new --filter=backend",
+    "migration:run": "turbo run migration:run --filter=backend",
+    "migration:rollback": "turbo run migration:rollback --filter=backend",
+    "migration:history": "turbo run migration:history --filter=backend",
+    "migration:current": "turbo run migration:current --filter=backend",
+    "migration:status": "turbo run migration:status --filter=backend",
+    "migration:recreate": "turbo run migration:recreate --filter=backend",
+    "migration:uncommit": "turbo run migration:uncommit --filter=backend",
+    "db:reset": "turbo run db:reset --filter=backend",
+    "db:recreate": "turbo run db:recreate --filter=backend"
   },
   "devDependencies": {
     "turbo": "^2.0.0"
