--- a/package.json
+++ b/package.json
@@ -33,7 +33,13 @@
     "migration:recreate": "turbo run migration:recreate --filter=backend",
     "migration:uncommit": "turbo run migration:uncommit --filter=backend",
     "db:reset": "turbo run db:reset --filter=backend",
-    "db:recreate": "turbo run db:recreate --filter=backend"
+    "db:recreate": "turbo run db:recreate --filter=backend",
+    "docker:up": "cd services/backend && docker-compose up -d",
+    "docker:down": "cd services/backend && docker-compose down",
+    "docker:stop": "cd services/backend && docker-compose stop",
+    "docker:restart": "cd services/backend && docker-compose restart",
+    "docker:logs": "cd services/backend && docker-compose logs -f",
+    "docker:ps": "cd services/backend && docker-compose ps"
   },
   "devDependencies": {
     "turbo": "^2.0.0"
