Fix medical document upload functionality with real-time progress
- Add WebSocket authentication for real-time upload progress
- Fix upload progress visualization that was not showing
- Add fallback progress simulation when WebSocket is unavailable
- Always show upload progress immediately when upload starts
- Add comprehensive logging for debugging
- Fix WebSocket endpoint URLs to match backend routing
- Add proper error handling and cleanup
- Enhance upload UI with file name display and connection status
- Add port management scripts for development workflow

Features:
- Real-time upload progress via WebSocket
- Smooth fallback progress animation
- Visual upload status indicators
- Cross-platform file upload support
- Enhanced error handling and user feedback
- Docker management utilities with npm scripts

--- a/package.json
+++ b/package.json
@@ -39,7 +39,11 @@
     "docker:stop": "cd services/backend && docker-compose stop",
     "docker:restart": "cd services/backend && docker-compose restart",
     "docker:logs": "cd services/backend && docker-compose logs -f",
-    "docker:ps": "cd services/backend && docker-compose ps"
+    "docker:ps": "cd services/backend && docker-compose ps",
+    "kill:port": "cd services/backend && python scripts/kill_port.py",
+    "kill:port:force": "cd services/backend && python scripts/kill_port.py --force",
+    "kill:all": "cd services/backend && python scripts/kill_port.py --all",
+    "kill:list": "cd services/backend && python scripts/kill_port.py --list"
   },
   "devDependencies": {
     "turbo": "^2.0.0"
