feat: Fix email timeout, enhance document styling, and improve database schema
🔧 Backend Improvements:
- Fix email service timeout issues (10s timeout vs 75s+ before)
- Add comprehensive SMTP error handling and configuration checks
- Add missing Article model fields: video_url, author_bio, updated_at
- Create properly versioned migrations (003, 004) following naming convention
- Update seeding scripts with new schema fields and enhanced content
- Add npm scripts for seeding (seed:content, seed:data)

📱 Frontend Enhancements:
- Center all modal text for consistent design
- Enhance document viewer styling with card layouts and better typography
- Improve content sections with proper spacing, borders, and visual hierarchy
- Add professional styling to document details and content text
- Fix shadow prop deprecation warnings across multiple components

🗃️ Database Schema:
- Migration 003: Add video_url field to articles table
- Migration 004: Add author_bio and updated_at fields to articles table
- Update seed data with 4 comprehensive articles including new fields
- Maintain backward compatibility and proper rollback support

📚 Documentation:
- Add comprehensive SEEDING_SCHEMA_UPDATE.md documentation
- Update scripts README with seeding information and npm integration
- Document migration versioning fix and schema changes

✅ Fixes:
- Resolve index page content loading HTTP 500 errors
- Improve email service reliability and performance
- Enhance document content readability and professional appearance
- Ensure consistent modal design patterns across the app

--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -21,6 +21,8 @@
     "migration:uncommit": "python scripts/manage.py migration-uncommit",
     "db:reset": "python scripts/manage.py db-reset",
     "db:recreate": "python scripts/manage.py db-recreate",
+    "seed:content": "python scripts/seed_content.py",
+    "seed:data": "python scripts/seed_data.py",
     "alembic": "alembic",
     "alembic:upgrade": "alembic upgrade head",
     "alembic:downgrade": "alembic downgrade -1",
